@@ -1,3 +1,9 @@
+2004-09-26  Jerry Quinn  <jlquinn@optonline.net>
+
+	* java/awt/image/BandedSampleModel.java: Implement.
+	* Makefile.am: Add java/awt/image/BandedSampleModel.java.
+	* Makefile.in: Regenerated.
+	
 2004-09-25  Michael Koch  <konqueror@gmx.de>
 
 	* java/awt/Window.java: Fixed whitespace difference with GNU
